Add firebase-admin dependency to package.json
Added firebase-admin as a dependency.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "type": "module",
   "dependencies": {
-    "razorpay": "^2.9.2"
+    "razorpay": "^2.9.2",
+    "firebase-admin": "^12.1.0"
   }
 }
 
